// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSX should add just attributes 1`] = `
"var oi_1 = require(\\"./oi\\");
function test() {
  return React.createElement(\\"i\\", {
    id: \\"1\\",
    f: oi_1.default
  });
}
"
`;

exports[`JSX should add just attributes and spread 1`] = `
"var oi_1 = require(\\"./oi\\");
function test() {
  return React.createElement(\\"i\\", Object.assign({
    id: \\"1\\",
    f: oi_1.default
  }, props));
}
"
`;

exports[`JSX should add text 1`] = `
"function test() {
  return React.createElement(\\"div\\", null, \\"1\\");
}
"
`;

exports[`JSX should handle JSX fragment 1`] = `
"var react_1 = require(\\"react\\");
function test() {
  return react_1.default.createElement(\\"div\\", null, react_1.default.createElement(react_1.default.Fragment, null, react_1.default.createElement(\\"div\\", null, \\"1\\")));
}
"
`;

exports[`JSX should have only one spread props 1`] = `
"function test() {
  return React.createElement(\\"i\\", Object.assign({}, props));
}
"
`;

exports[`JSX should keep the order 1`] = `
"var oi_1 = require(\\"./oi\\");
function test() {
  return React.createElement(\\"i\\", Object.assign({
    id: 1,
    f: oi_1.default
  }, props, {
    s: 2
  }, rest));
}
"
`;

exports[`JSX should parse simple jsx 1`] = `
"function test() {
  return React.createElement(\\"div\\", null);
}
"
`;

exports[`JSX should remove empty expressions 1`] = `
"function test() {
  return React.createElement(\\"i\\", null, \\" \\", \\" \\");
}
"
`;

exports[`JSX should work with JSXSpreadChild 1`] = `
"function test() {
  return React.createElement(\\"i\\", null, children);
}
"
`;
